Services page done | mailer templates updated | marquee fixed

--- a/views/mailer/welcome.ejs
+++ b/views/mailer/welcome.ejs
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
-  <title>Thank you email</title>
+  <title>Welcome email</title>
   <style>
     *{box-sizing:border-box}body{margin:0;padding:0}a[x-apple-data-detectors]{color:inherit!important;text-decoration:inherit!important}#MessageViewBody a{color:inherit;text-decoration:none}p{line-height:inherit}@media (max-width:720px){.icons-inner{text-align:center}.icons-inner td{margin:0 auto}.row-content{width:100%!important}.image_block img.big{width:auto!important}.column .border,.mobile_hide{display:none}.stack .column{width:100%;display:block}.mobile_hide{min-height:0;max-height:0;max-width:0;overflow:hidden;font-size:0}}
   </style>
@@ -20,10 +20,13 @@
           <table align="center" style="background-color: #fff; width: 100%; padding: 32px; padding-bottom: 0px;">
             <tbody>
               <tr>
-                <td align="center">
+                <td style="width: 60%;">
                   <a href="https://imgbb.com/">
                     <img src="https://i.ibb.co/p1ns9wN/logo.png" alt="Add More Design" style="width: 100%; max-width: 78px;">
                   </a>
+                </td>
+                <td style="width: 40%;">
+                  <img src="https://i.ibb.co/JHdFzcc/welcome.png" alt="Tiket.com" style="width: 100%; max-width: 200px;">
                 </td>
               </tr>
             </tbody>
@@ -36,7 +39,7 @@
             <tbody>
               <tr>
                 <td align="center" style="width: 100%;">
-                  <img src="https://i.ibb.co/1TK3cG8/thankyou.png" alt="enchante" border="0">
+                  <img src="https://i.ibb.co/S04p9mG/enchante.png" alt="enchante" border="0">
                 </td>
               </tr>
             </tbody>
@@ -49,15 +52,46 @@
             <tbody>
               <tr>
                 <td align="left" style="width: 100%;">
-                  <p style="color: #3333cc; font-size: 24px;">
-                    Hi <%= name %>,
+                  <p style="color: #ff8095; font-size: 24px;">
+                    Hi <%= name %>. We’re glad to have you join us.
                   </p>
                   <p style="color: #000000; line-height: 24px; font-weight: 400; font-size: 16px;">
-                    It's so great to see that you're interested in finding out a little more about our studio and the services that we offer. Click the button below to head to our enquiry form where you can book your FREE discovery call with absolutely no obligation to book with us. We hope to see you soon!
+                    It's so great to see that you're interested in finding out a little more about our studio and the services that we offer. I have a feeling we’ll get along just great.
                   </p>
                   <p style="color: #000000; line-height: 24px; font-weight: 400; font-size: 16px;">
-                    Meanwhile, hit a reply to this mail and tell us what you’re upto. We’d love to know more about you.
+                    This is a laid-back and very personal newsletter where we only share good stuff. There’s no schedule, coz we only want to share things that we feel will be intereting to you. This is a strictly no filler content zone.
                   </p>
+                  <p>
+                    Here’s what you can expect from Add More Design emails -
+                  </p>
+                  <table cellpadding="2" cellspacing="2" border="0"> 
+                    <tr>
+                      <td style="vertical-align:top;">✨&nbsp;</td>
+                      <td>Case studies</td>
+                    </tr>
+                    <tr>
+                      <td style="vertical-align:top;">✨&nbsp;</td>
+                      <td>Curated resources</td>
+                    </tr>
+                    <tr>
+                      <td style="vertical-align:top;">✨&nbsp;</td>
+                      <td>Observations from around the world</td>
+                    </tr>
+                    <tr>
+                      <td style="vertical-align:top;">✨&nbsp;</td>
+                      <td>2AM thoughts on design and creative industry</td>
+                    </tr>
+                  </table>
+
+                    
+                    <p style="color: #000000; line-height: 24px; font-weight: 400; font-size: 16px; word-break: break-all;">
+
+                      If you are using Gmail, drag this mail into your Primary tab and add <a href="mailto:addmoredesign.studio@gmail.com">addmoredesign.studio@gmail.com</a> to your Contact list, so you never miss an update.
+                      
+                    </p>
+                    <p style="color: #000000; line-height: 24px; font-weight: 400; font-size: 16px;">
+                      Meanwhile, hit a reply to this mail and tell us what you’re upto. We’d love to know more about you.
+                    </p>
                     <p style="color: #000000; line-height: 24px; font-weight: 400; font-size: 16px;">
                       Kumud
                     </p>
