--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -10,17 +10,24 @@
       <a href="/">Home</a>
     </li>
     <li>
-      <a>Work</a>
+      <a href="/work">Work</a>
     </li>
     <li>
       <a href="/about">About</a>
     </li>
     <li>
+      <a href="/services">
+        Services
+      </a>
+    </li>
+    <li>
       <a>Journal</a>
     </li>
     <li>
-      <a>Contact</a>
+      <a class="modal-trigger-btn">Contact</a>
     </li>
   </ul>
   <!-- <img class="sidebar-toggle" src="/img/nav_button.png" /> -->
 </div>
+<%- include("contactFormModal.html") %>
+<%- include("subscribeFormModal.html") %>
