--- a/views/partials/repeatedBanner.html
+++ b/views/partials/repeatedBanner.html
@@ -1,11 +1,19 @@
-<section
-  class="row-banner"
->
-  <div>
-    <p class="marquee">
-      <% for(var i = 0; i < 100; i++) { %>
-        <%= text %>&nbsp; |&nbsp;
-      <% } %>
-    </p>
+<section class="row-banner">
+  <div class="marquee">
+    <div class="marquee__inner" aria-hidden="true">
+      <span>  <%= text %>&nbsp; |&nbsp; </span>
+      <span>  <%= text %>&nbsp; |&nbsp; </span>
+      <span>  <%= text %>&nbsp; |&nbsp; </span>
+      <span>  <%= text %>&nbsp; |&nbsp; </span>
+      <span>  <%= text %>&nbsp; |&nbsp; </span>
+      <span>  <%= text %>&nbsp; |&nbsp; </span>
+      <span>  <%= text %>&nbsp; |&nbsp; </span>
+      <span>  <%= text %>&nbsp; |&nbsp; </span>
+      <span>  <%= text %>&nbsp; |&nbsp; </span>
+      <span>  <%= text %>&nbsp; |&nbsp; </span>
+      <span>  <%= text %>&nbsp; |&nbsp; </span>
+      <span>  <%= text %>&nbsp; |&nbsp; </span>
+      <span>  <%= text %>&nbsp; |&nbsp; </span>
+    </div>
   </div>
 </section>
