--- a/views/work.html
+++ b/views/work.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add More Designs</title>
+    <title>Work | Add More Designs</title>
     <%- include("partials/styles.html") %>
     <link href="/work.css" rel="stylesheet">
   </head>
@@ -28,7 +28,7 @@
       <p>
         <span>We're a friendly bunch. stay connected with us on Instagram </span>@addmoredesign_studio</p>
     </section>
-    <%- include("partials/contactForm.html") %>
+    <%- include("partials/contactForm.html", { text: "", btnText: "" }) %>
     <%- include("partials/footer.html") %>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     
