--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -20,7 +20,7 @@
           </div>
           <div class="link-section link-sec2">
             <a>Pro-Bono Program</a>
-            <a>Journal</a>
+            <a href="/journal">Journal</a>
             <a class="modal-trigger-btn">Contact</a>
             <a>Privacy Policy</a>
           </div>
