--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -21,7 +21,7 @@
       </a>
     </li>
     <li>
-      <a>Journal</a>
+      <a href="/journal">Journal</a>
     </li>
     <li>
       <a class="modal-trigger-btn">Contact</a>
