--- a/views/mailer/welcome.ejs
+++ b/views/mailer/welcome.ejs
@@ -56,10 +56,10 @@
                     Hi <%= name %>. We’re glad to have you join us.
                   </p>
                   <p style="color: #000000; line-height: 24px; font-weight: 400; font-size: 16px;">
-                    It's so great to see that you're interested in finding out a little more about our studio and the services that we offer. I have a feeling we’ll get along just great.
+                    It's so great to see that you're interested in finding out a little more about our studio and joining our small (but mighty) community. I have a feeling we’ll get along just great.
                   </p>
                   <p style="color: #000000; line-height: 24px; font-weight: 400; font-size: 16px;">
-                    This is a laid-back and very personal newsletter where we only share good stuff. There’s no schedule, coz we only want to share things that we feel will be intereting to you. This is a strictly no filler content zone.
+                    This is a laid-back and very personal newsletter where we only share the good stuff. There’s no schedule because we only want to share things that we feel will be interesting to you. This is a strictly no filler content zone.
                   </p>
                   <p>
                     Here’s what you can expect from Add More Design emails -
