--- a/views/partials/contactForm.html
+++ b/views/partials/contactForm.html
@@ -1,4 +1,4 @@
-<section class="contact-section">
+<section class="contact-section <% if (!text) { %>padding-top-zero<% } %>">
   <div>
     <p>
       <% if (text) { %>
