--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -7,7 +7,7 @@
         <div class="project-image-container">
           <a href="/project/<%= projects[i].id %>">
             <img src="/img/<%= projects[i].coverImage %>" />
-            <img class="img-hover" src="/img/project-2.png" />
+            <img class="img-hover" src="/img/<%= projects[i].gallery[0] %>" />
           </a>
         </div>
         <h3>
@@ -23,14 +23,18 @@
       </div>
     <% } %>
   </div>
-  <div class="load-more-container" style="display: flex; justify-content: center; padding-bottom: 32px;">
-    <button id="load-more" class="button btn-primary" >See more</button>
-  </div>
+  <% if (seeMore && seeMore === "true") { %>
+    <div class="load-more-container" style="display: flex; justify-content: center; padding-bottom: 32px;">
+      <button id="load-more" class="button btn-secondary" >See more</button>
+    </div>
+  <% } %>
 </section>
 
 <script>
   let index = 0;
-  document.getElementById("load-more").addEventListener("click", function() {
+  const loadMoreButton = document.getElementById("load-more");
+  if (loadMoreButton) {
+    loadMoreButton.addEventListener("click", function() {
     index = index + 4;
     fetch("/api/projects?limit=4&offset=" + index)
       .then((response) => {
@@ -45,7 +49,7 @@
               <div class="project-image-container">
                 <a href="/project/${projects[i].id}">
                   <img src="/img/${projects[i].coverImage}" />
-                  <img class="img-hover" src="/img/project-2.png" />
+                  <img class="img-hover" src="/img/${projects[i].gallery[0]}" />
                 </a>
               </div>
               <h3>
@@ -62,10 +66,11 @@
           `;
         }
         document.getElementsByClassName("flex-wrapper")[0].innerHTML += html;
-        if (projects.length === 0) document.getElementsByClassName("load-more-container")[0].style.display = "none";
+        if (!data.hasMore) document.getElementsByClassName("load-more-container")[0].style.display = "none";
       })
       .catch((err) => {
         console.log(err);
       });
   })
+  }
 </script>
