--- a/views/work.html
+++ b/views/work.html
@@ -11,6 +11,13 @@
   <body id="work">
     <!-- Intro Section -->
     <%- include("partials/header.html") %>
+    <%- include("partials/repeatedBanner.html",
+    {
+      text: "We are still onboarding projects for 2022.",
+      redirectTo: '',
+      type: "secondary"
+    }
+) %>
     <section class="intro-section">
       <div>
         <h1>Work</h1>
@@ -21,7 +28,7 @@
         </p>
       </div>
     </section>
-    <%- include("partials/projects.html"), { projects: projects } %>
+    <%- include("partials/projects.html", { projects: projects, seeMore: "true" }) %>
     <section
       class="banner-section"
     >
