Insta feed added

--- a/views/about.html
+++ b/views/about.html
@@ -79,6 +79,7 @@
     </div>
     <div></div>
   </section>
+  <%- include("partials/instaFeed.html") %>
   <section
     class="banner-section"
   >
