--- a/views/home.html
+++ b/views/home.html
@@ -206,12 +206,14 @@
         </a>
       </div>
     </section>
+    <%- include("partials/instaFeed.html") %>
     <section
       class="banner-section"
     >
       <p>
         <span>We're a friendly bunch. stay connected with us on Instagram </span>@addmoredesign_studio</p>
     </section>
+    
     <%- include("partials/footer.html") %>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script>
