--- a/views/journal.html
+++ b/views/journal.html
@@ -63,6 +63,7 @@
       </button>
     </form>
   </section>
+  <%- include("partials/instaFeed.html") %>
   <section
     class="banner-section"
   >
