--- a/views/post.html
+++ b/views/post.html
@@ -100,7 +100,7 @@
       </button>
     </form>
   </section>
-  
+  <%- include("partials/instaFeed.html") %>
   <section
       class="banner-section"
     >
