--- a/views/projects.html
+++ b/views/projects.html
@@ -81,6 +81,7 @@
     <div class="hide-lg">
       <%- include("partials/contactForm.html", { text: "", btnText: "" }) %>
     </div>
+    <%- include("partials/instaFeed.html") %>
     <section
       class="banner-section"
     >
