--- a/views/services.html
+++ b/views/services.html
@@ -391,6 +391,7 @@
     </div>
   </section>
   <%- include("partials/contactForm.html", { text: "Looking for something else?", btnText: "Submit" }) %>
+  <%- include("partials/instaFeed.html") %>
   <section
     class="banner-section"
   >
