--- a/views/work.html
+++ b/views/work.html
@@ -29,6 +29,7 @@
       </div>
     </section>
     <%- include("partials/projects.html", { projects: projects, seeMore: "true" }) %>
+    <%- include("partials/instaFeed.html") %>
     <section
       class="banner-section"
     >
